Update YAML test and fix pipeline trace order